--- a/src/locales/data.json
+++ b/src/locales/data.json
@@ -5,13 +5,13 @@
     "paramsPage.balance":"Balance",
     "paramsPage.firstName":"First Name",
     "paramsPage.AccountId":"Account ID",
-    "paramsPage.email":"Email",
     "paramsPage.logOut":"Log out",
     "paramsPage.validationPopupLogOutMessage":"Are you sure you want to Log Out?",
     "paramsPage.login":"Login",
+    "paramsPage.email":"Email",
     "paramsPage.register":"Register",
     "paramsPage.bannerMessagePart2":"Travel together !",
-    "paramsPage.manageCar":"Manage car",
+    "paramsPage.manageAccount":"Manage Account",
     "paramsPage.destination":"Destination",
     "paramsPage.manageTravel":"Add travel",
     "paramsPage.titleTravel":"Your travel",
